syntax = "proto3";

option csharp_namespace = "ED.DomainServices.Esb";

package esb;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "enums.proto";

service Esb {
  // messages
  rpc OpenMessage (OpenMessageRequest) returns (OpenMessageResponse);
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc GetForwardedMessageOriginalRecipientProfile (GetForwardedMessageOriginalRecipientProfileRequest) returns (GetForwardedMessageOriginalRecipientProfileResponse);

  rpc Inbox (BoxRequest) returns (InboxResponse);
  rpc Outbox (BoxRequest) returns (OutboxResponse);
  rpc ViewMessage (ViewMessageRequest) returns (ViewMessageResponse);
  rpc GetMessage (GetMessageRequest) returns (GetMessageResponse);
  rpc CheckMessageRecipients (CheckMessageRecipientsRequest) returns (CheckMessageRecipientsResponse);
  rpc GetBlobsInfo (GetBlobsInfoRequest) returns (GetBlobsInfoResponse);

  // stats
  rpc GetMessageSentStatistics (GetMessagesStatisticsRequest) returns (GetMessagesStatisticsResponse);
  rpc GetMessageReceivedStatistics(GetMessagesStatisticsRequest) returns (GetMessagesStatisticsResponse);
  rpc GetSentMessageCount (GetSentMessageCountRequest) returns (GetSentMessageCountResponse);
  rpc GetReceivedMessageCount (GetReceivedMessageCountRequest) returns (GetReceivedMessageCountResponse);

  // profiles
  rpc CreatePassiveIndividual (CreatePassiveIndividualRequest) returns (CreatePassiveIndividualResponse);
  rpc CreateOrUpdateIndividual (CreateOrUpdateIndividualRequest) returns (CreateOrUpdateIndividualResponse);
  rpc CreateLegalEntity (CreateLegalEntityRequest) returns (CreateLegalEntityResponse);

  rpc CheckProfileTargetGroupAccess (CheckProfileTargetGroupAccessRequest) returns (CheckProfileTargetGroupAccessResponse);
  rpc CheckProfileOnBehalfOfAccess (CheckProfileOnBehalfOfAccessRequest) returns (CheckProfileOnBehalfOfAccessResponse);
  rpc CheckExistingIndividual (CheckExistingIndividualRequest) returns (CheckExistingIndividualResponse);
  rpc GetTargetGroupProfiles (GetTargetGroupProfilesRequest) returns (GetTargetGroupProfilesResponse);
  rpc SearchTargetGroupProfiles (SearchTargetGroupProfilesRequest) returns (SearchTargetGroupProfilesResponse);
  rpc GetEsbUser (GetEsbUserRequest) returns (GetEsbUserResponse);
  rpc GetRegisteredProfiles (GetRegisteredProfilesRequest) returns (GetRegisteredProfilesResponse);
  rpc CheckExistingLegalEntity (CheckExistingLegalEntityRequest) returns (CheckExistingLegalEntityResponse);
  rpc CheckAllLoginsExist(CheckAllLoginsExistRequest) returns (CheckAllLoginsExistResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);

  // target groups
  rpc GetTargetGroups (GetTargetGroupsRequest) returns (GetTargetGroupsResponse);
  rpc CheckTargetGroupId (CheckTargetGroupIdRequest) returns (CheckTargetGroupIdResponse);

  // templates
  rpc CheckProfileTemplateAccess (CheckProfileTemplateAccessRequest) returns (CheckProfileTemplateAccessResponse);
  rpc GetTemplates (GetTemplatesRequest) returns (GetTemplatesResponse);
  rpc GetTemplate (GetTemplateRequest) returns (GetTemplateResponse);

  // blobs
  rpc GetStorageBlobs (GetStorageBlobsRequest) returns (GetStorageBlobsResponse);
  rpc GetStorageBlobInfo (GetStorageBlobInfoRequest) returns (GetStorageBlobInfoResponse);
  rpc DeteleStorageBlob (DeteleStorageBlobRequest) returns (google.protobuf.Empty);
  rpc CheckStorageBlob (CheckStorageBlobRequest) returns (CheckStorageBlobResponse);

  // countries
  rpc GetCountries (GetCountriesRequest) returns (GetCountriesResponse);
  rpc CheckCountryIso (CheckCountryIsoRequest) returns (CheckCountryIsoResponse);
}

message BoxRequest {
  int32 profile_id = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  google.protobuf.Int32Value template_id = 4;
  google.protobuf.Int32Value offset = 5;
  google.protobuf.Int32Value limit = 6;
}

message InboxResponse{
  message Message {
    int32 message_id = 1;
    google.protobuf.Timestamp date_sent = 2;
    google.protobuf.Timestamp date_received = 3;
    string subject = 4;
    string sender_profile_name = 5;
    string sender_login_name = 6;
    string recipient_profile_name = 7;
    string recipient_login_name = 8;
    string url = 9;
    google.protobuf.StringValue rnu = 10;
    int32 template_id = 11;
  }

  repeated Message result = 1;
  int32 length = 2;
}


message OutboxResponse{
  message Message {
    int32 message_id = 1;
    google.protobuf.Timestamp date_sent = 2;
    string subject = 3;
    string sender_profile_name = 4;
    string sender_login_name = 5;
    string recipients = 6;
    string url = 7;
    google.protobuf.StringValue rnu = 8;
    int32 template_id = 9;
  }

  repeated Message result = 1;
  int32 length = 2;
}

message GetMessagesStatisticsRequest {
  google.protobuf.Timestamp mont_date = 1;
}

message GetMessagesStatisticsResponse {
  message Statistics {
    string month = 1;
    int32 value = 2;
  }

  repeated Statistics result = 1;
}

message GetSentMessageCountRequest {
  google.protobuf.Timestamp from_date = 1;
  google.protobuf.Timestamp to_date = 2;
}

message GetSentMessageCountResponse {
  int32 value = 1;
}

message GetReceivedMessageCountRequest {
  google.protobuf.Timestamp from_date = 1;
  google.protobuf.Timestamp to_date = 2;
}

message GetReceivedMessageCountResponse {
  int32 value = 1;
}

message CheckProfileTargetGroupAccessRequest {
  int32 profile_id = 1;
  int32 target_group_id = 2;
}

message CheckProfileTargetGroupAccessResponse {
  bool has_access = 1;
}

message CheckProfileOnBehalfOfAccessRequest {
  int32 profile_id = 1;
}

message CheckProfileOnBehalfOfAccessResponse {
  bool has_access = 1;
}

message CheckExistingIndividualRequest {
  string identifier = 1;
}

message CheckExistingIndividualResponse {
  bool is_existing = 1;
}

message GetTargetGroupProfilesRequest {
  int32 target_group_id = 1;
  google.protobuf.Int32Value offset = 2;
  google.protobuf.Int32Value limit = 3;
}

message GetTargetGroupProfilesResponse {
  message Profile {
    int32 profile_id = 1;
    string identifier = 2;
    string name = 3;
    string email = 4;
    string phone = 5;
  }

  repeated Profile result = 1;
  int32 length = 2;
}

message SearchTargetGroupProfilesRequest {
  string identifier = 1;
  google.protobuf.Int32Value template_id = 2;
  int32 target_group_id = 3;
}

message SearchTargetGroupProfilesResponse {
  message Profile {
    int32 profile_id = 1;
    string identifier = 2;
    string name = 3;
    string email = 4;
    string phone = 5;
  }

  optional Profile result = 1;
}

message GetTargetGroupsRequest {
  int32 profile_id = 1;
}

message GetTargetGroupsResponse {
  message TargetGroup {
    int32 target_group_id = 1;
    string name = 2;
    bool can_select_recipients = 3;
  }

  repeated TargetGroup result = 1;
}

message CreatePassiveIndividualRequest {
  message Address {
    string residence = 1;
    google.protobuf.StringValue city = 2;
    google.protobuf.StringValue state = 3;
    google.protobuf.StringValue country_iso = 4;
  }

  string identifier = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
  string email = 5;
  string phone = 6;
  Address address = 7;
  int32 action_login_id = 8;
  string ip = 9;
}

message CreatePassiveIndividualResponse {
  int32 profile_id = 1;
}

message GetTemplatesRequest {
  int32 profile_id = 1;
}

message GetTemplatesResponse {
  message Temaplate {
    int32 template_id = 1;
    string name = 2;
    string identity_number = 3;
    enums.TemplateSecurityLevel read = 4;
    enums.TemplateSecurityLevel write = 5;
    google.protobuf.Int32Value response_template_id = 6;
  }

  repeated Temaplate result = 1;
}

message CheckProfileTemplateAccessRequest {
  int32 profile_id = 1;
  int32 template_id = 2;
}

message CheckProfileTemplateAccessResponse {
  bool has_access = 1;
}

message GetTemplateRequest {
  int32 template_id = 1;
}

message GetTemplateResponse {
  message Template {
    int32 template_id = 1;
    string name = 2;
    string identity_number = 3;
    enums.TemplateSecurityLevel read = 4;
    enums.TemplateSecurityLevel write = 5;
    string content = 6;
    google.protobuf.Int32Value response_template_id = 7;
  }

  optional Template result = 1;
}

message ViewMessageRequest {
  int32 message_id = 1;
}

message ViewMessageResponse {
  message Profile {
    int32 profile_id = 1;
    string name = 2;
    google.protobuf.Timestamp date_received = 3;
  }

  message Blob {
    int32 blob_id = 1;
    string file_name = 2;
    google.protobuf.Int64Value size = 3;
    google.protobuf.StringValue document_registration_number = 4;
    google.protobuf.BoolValue is_malicious = 6;
    google.protobuf.StringValue hash = 7;
    google.protobuf.StringValue hash_algorithm = 8;
    repeated BlobSignature signatures = 9;
  }

  message BlobSignature {
    bool covers_document = 1;
    google.protobuf.Timestamp sign_date = 2;
    bool is_timestamp = 3;
    bool valid_at_time_of_signing = 4;
    string issuer = 5;
    string subject = 6;
    google.protobuf.Timestamp valid_to = 7;
    google.protobuf.Timestamp valid_from = 8;
  }

  message Message {
    int32 message_id = 1;
    google.protobuf.Timestamp date_sent = 2;
    repeated Profile recipients = 3;
    string subject = 4;
    int32 template_id = 5;
    string body = 6;
    repeated Blob blobs = 7;
    google.protobuf.Int32Value forwarded_message_id = 8;
    google.protobuf.StringValue rnu = 9;
  }

  Message message = 1;
}

message GetMessageRequest {
  int32 message_id = 1;
  int32 profile_id = 2;
}

message GetMessageResponse {
  message SenderProfile {
    int32 profile_id = 1;
    string name = 2;
  }

  message RecipientProfile {
    int32 profile_id = 1;
    string name = 2;
  }

  message RecipientLogin {
    int32 login_id = 1;
    string name = 2;
  }

  message Blob {
    int32 blob_id = 1;
    string file_name = 2;
    google.protobuf.Int64Value size = 3;
    google.protobuf.StringValue document_registration_number = 4;
    google.protobuf.BoolValue is_malicious = 6;
    google.protobuf.StringValue hash = 7;
    google.protobuf.StringValue hash_algorithm = 8;
    repeated BlobSignature signatures = 9;
  }

  message BlobSignature {
    bool covers_document = 1;
    google.protobuf.Timestamp sign_date = 2;
    bool is_timestamp = 3;
    bool valid_at_time_of_signing = 4;
    string issuer = 5;
    string subject = 6;
    google.protobuf.Timestamp valid_to = 7;
    google.protobuf.Timestamp valid_from = 8;
  }

  message Message {
    int32 message_id = 1;
    google.protobuf.Timestamp date_sent = 2;
    SenderProfile sender = 3;
    google.protobuf.Timestamp date_received = 4;
    RecipientProfile recipient = 5;
    RecipientLogin recipient_login = 6;
    string subject = 7;
    int32 template_id = 8;
    string body = 9;
    repeated Blob blobs = 10;
    google.protobuf.Int32Value forwarded_message_id = 11;
    google.protobuf.StringValue rnu = 12;
  }

  Message message = 1;
}

message OpenMessageRequest {
  int32 message_id = 1;
  int32 profile_id = 2;
  int32 login_id = 3;
}

message OpenMessageResponse {
  message MessageInfo {
    google.protobuf.Timestamp date_received = 1;
    int32 login_id = 2;
    string login_name = 3;
  }

  optional MessageInfo result = 1;
}

message GetEsbUserRequest {
  string o_id = 1;
  string client_id = 2;
  google.protobuf.StringValue operator_identifier = 3;
  google.protobuf.StringValue represented_profile_identifier = 4;
}

message GetEsbUserResponse {
  message EsbUser {
    int32 profile_id = 1;
    int32 login_id = 2;
    google.protobuf.Int32Value operator_login_id = 3;
    google.protobuf.Int32Value represented_profile_id = 4;
  }

  optional EsbUser result = 1;
}

message CheckMessageRecipientsRequest {
  repeated int32 recipient_profile_ids = 1;
  int32 profile_id = 2;
}

message CheckMessageRecipientsResponse {
  bool is_ok = 1;
}

message SendMessageRequest {
  repeated int32 recipient_profile_ids = 1;
  int32 sender_profile_id = 2;
  int32 sender_login_id = 3;
  google.protobuf.Int32Value sender_via_login_id = 4;
  int32 template_id = 5;
  string subject = 6;
  string body = 7;
  string meta_fields = 8;
  repeated int32 blob_ids = 9;
  google.protobuf.Int32Value forwarded_message_id = 10;
  google.protobuf.StringValue rnu = 11;
}

message SendMessageResponse {
  int32 message_id = 1;
}

message GetForwardedMessageOriginalRecipientProfileRequest {
  int32 message_id = 1;
  int32 forwarded_message_id = 2;
}

message GetForwardedMessageOriginalRecipientProfileResponse {
  int32 recipient_profile_id = 1;
}

message GetBlobsInfoRequest {
  repeated int32 blob_ids = 1;
}

message GetBlobsInfoResponse {
  message Blob {
    int32 blob_id = 1;
    string file_name = 2;
    google.protobuf.StringValue hash_algorithm = 3;
    google.protobuf.StringValue hash = 4;
    google.protobuf.Int64Value size = 5;
  }

  repeated Blob result = 1;
}

message GetStorageBlobsRequest {
  int32 profile_id = 1;
  google.protobuf.Int32Value offset = 2;
  google.protobuf.Int32Value limit = 3;
}

message GetStorageBlobsResponse {
  message Blob {
    int32 blob_id = 1;
    string file_name = 2;
    google.protobuf.Int64Value size = 3;
    google.protobuf.StringValue document_registration_number = 4;
    google.protobuf.BoolValue is_malicious = 6;
    google.protobuf.StringValue hash = 7;
    google.protobuf.StringValue hash_algorithm = 8;
    repeated BlobSignature signatures = 9;
  }

  message BlobSignature {
    bool covers_document = 1;
    google.protobuf.Timestamp sign_date = 2;
    bool is_timestamp = 3;
    bool valid_at_time_of_signing = 4;
    string issuer = 5;
    string subject = 6;
    google.protobuf.Timestamp valid_to = 7;
    google.protobuf.Timestamp valid_from = 8;
  }

  repeated Blob result = 1;
  int32 length = 2;
}

message GetStorageBlobInfoRequest {
  int32 profile_id = 1;
  int32 blob_id = 2;
}

message GetStorageBlobInfoResponse {
  message Blob {
    int32 blob_id = 1;
    string file_name = 2;
    google.protobuf.Int64Value size = 3;
    google.protobuf.StringValue document_registration_number = 4;
    google.protobuf.BoolValue is_malicious = 6;
    google.protobuf.StringValue hash = 7;
    google.protobuf.StringValue hash_algorithm = 8;
    repeated BlobSignature signatures = 9;
  }

  message BlobSignature {
    bool covers_document = 1;
    google.protobuf.Timestamp sign_date = 2;
    bool is_timestamp = 3;
    bool valid_at_time_of_signing = 4;
    string issuer = 5;
    string subject = 6;
    google.protobuf.Timestamp valid_to = 7;
    google.protobuf.Timestamp valid_from = 8;
  }

  optional Blob result = 1;
}

message DeteleStorageBlobRequest {
  int32 profile_id = 1;
  int32 blob_id = 2;
}

message CheckStorageBlobRequest {
  int32 profile_id = 1;
  int32 blob_id = 2;
}

message CheckStorageBlobResponse {
  bool is_there = 1;
}

message GetRegisteredProfilesRequest {
  string identifier = 1;
  google.protobuf.Int32Value offset = 2;
  google.protobuf.Int32Value limit = 3;
}

message GetRegisteredProfilesResponse {
  message Address {
    int32 address_id = 1;
    google.protobuf.StringValue residence = 2;
    google.protobuf.StringValue city = 3;
    google.protobuf.StringValue state = 4;
    google.protobuf.StringValue country_iso = 5;
  }

  message Profile {
    int32 profile_id = 1;
    string identifier = 2;
    string name = 3;
    string email = 4;
    string phone = 5;
    optional Address address = 8;
    bool is_activated = 9;
    bool is_passive= 10;
    int32 target_group_id = 11;
    string target_group_name = 12;
  }

  repeated Profile result = 1;
  int32 length = 2;
}

message CreateOrUpdateIndividualRequest {
  message Address {
    string residence = 1;
    google.protobuf.StringValue city = 2;
    google.protobuf.StringValue state = 3;
    google.protobuf.StringValue country_iso = 4;
  }

  string identifier = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
  string email = 5;
  string phone = 6;
  Address address = 7;
  bool is_email_notification_enabled = 8;
  bool is_full_featured = 9;
  int32 action_login_id = 10;
  string ip = 11;
}

message CreateOrUpdateIndividualResponse {
  int32 profile_id = 1;
}

message GetCountriesRequest
{
  google.protobuf.Int32Value offset = 1;
  google.protobuf.Int32Value limit = 2;
}

message GetCountriesResponse {
  message Country {
    string iso = 1;
    string name = 2;
  }

  repeated Country result = 1;
  int32 length = 2;
}

message CheckCountryIsoRequest {
  string iso = 1;
}

message CheckCountryIsoResponse {
  bool is_valid = 1;
}

message CreateLegalEntityRequest {
  message OwnerData {
    string identifier = 1;
    string email = 2;
    string phone = 3;
  }
  message Address {
    string residence = 1;
    google.protobuf.StringValue city = 2;
    google.protobuf.StringValue state = 3;
    google.protobuf.StringValue country_iso = 4;
  }

  string identifier = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  Address address = 5;
  int32 target_group_id = 6;
  repeated OwnerData owners_data = 7;
  int32 action_login_id = 8;
  string ip = 9;
}

message CreateLegalEntityResponse {
  int32 profile_id = 1;
}

message CheckTargetGroupIdRequest {
  int32 target_group_id = 1;
}

message CheckTargetGroupIdResponse {
  bool is_valid = 1;
}

message CheckExistingLegalEntityRequest {
  string identifier = 1;
  int32 target_group_id = 2;
}

message CheckExistingLegalEntityResponse {
  bool is_existing = 1;
}

message CheckAllLoginsExistRequest {
  repeated string identifiers = 1;
}

message CheckAllLoginsExistResponse {
  bool is_valid = 1;
}

message GetProfileRequest {
  int32 profile_id = 1;
}

message GetProfileResponse {
  message Address {
    int32 address_id = 1;
    google.protobuf.StringValue residence = 2;
    google.protobuf.StringValue city = 3;
    google.protobuf.StringValue state = 4;
    google.protobuf.StringValue country_iso = 5;
  }

  message Profile {
    int32 profile_id = 1;
    string identifier = 2;
    string name = 3;
    string email = 4;
    string phone = 5;
    optional Address address = 6;
  }

  optional Profile result = 1;
}
